# panorama

./: .gitignore  404.html  CNAME  Cargo.toml  Justfile  README.md  chapter_1.html  code.html  config.html  deny.toml  index.html  intro.html  notes.md  print.html  searchindex.js  searchindex.json
.github/workflows/: build-deb.yml  ci.yml  doc.yml  run-tests.yml
api/: search-index.js  settings.html  source-files.js
api/panorama/: all.html  fn.report_err.html  index.html  sidebar-items.js  type.ExitSender.html
api/panorama/config/: enum.ImapAuth.html  enum.TlsMethod.html  fn.read_config.html  fn.spawn_config_watcher_system.html  fn.start_inotify_stream.html  index.html  sidebar-items.js  struct.Config.html  struct.ImapConfig.html  struct.MailAccountConfig.html  type.ConfigWatcher.html
api/panorama/mail/: enum.MailCommand.html  enum.MailEvent.html  fn.imap_main.html  fn.osu.html  fn.run_mail.html  index.html  sidebar-items.js  struct.EmailMetadata.html  struct.MailStore.html
api/panorama/script/: fn.create_script_vm.html  index.html  sidebar-items.js
api/panorama/search/: index.html  sidebar-items.js  struct.SearchIndex.html
api/panorama/ui/: constant.FRAME.html  constant.FRAME_DURATION.html  fn.run_ui.html  fn.run_ui2.html  index.html  sidebar-items.js  struct.Rect.html  struct.UI.html  struct.UiParams.html  type.FrameType.html  type.Screen.html  type.TermType.html
api/panorama_imap/: all.html  index.html  sidebar-items.js
api/panorama_imap/builders/: index.html  sidebar-items.js
api/panorama_imap/client/: enum.ClientAuthenticated.html  enum.ClientUnauthenticated.html  index.html  sidebar-items.js  struct.Client.html  struct.ClientConfig.html  struct.ClientConfigBuilder.html  struct.ClientEncryptedUnauthenticated.html  struct.ClientNotConnected.html  struct.ClientNotConnectedBuilder.html  struct.ClientUnauthenticatedEncrypted.html  struct.ClientUnauthenticatedUnencrypted.html  struct.ClientUnencryptedUnauthenticated.html  struct.IdleToken.html  struct.ResponseCombined.html  struct.ResponseStream.html  struct.SelectResponse.html  type.ClientBuilder.html  type.ResponseFuture.html  type.ResponseStream.html
api/panorama_imap/codec/: index.html  sidebar-items.js  struct.ImapCodec.html
api/panorama_imap/command/: enum.Command.html  enum.FetchAttr.html  enum.FetchItems.html  enum.SearchCriteria.html  index.html  sidebar-items.js
api/panorama_imap/parser/: constant._PEST_GRAMMAR_Rfc3501.html  enum.Rule.html  fn.build_address.html  fn.build_astring.html  fn.build_capabilities.html  fn.build_capability.html  fn.build_continue_req.html  fn.build_date_time.html  fn.build_envelope.html  fn.build_flag.html  fn.build_flag_list.html  fn.build_literal.html  fn.build_mailbox_data.html  fn.build_mailbox_list.html  fn.build_mbx_list_flags.html  fn.build_msg_att.html  fn.build_msg_att_static.html  fn.build_nstring.html  fn.build_number.html  fn.build_resp_code.html  fn.build_resp_cond_state.html  fn.build_resp_text.html  fn.build_resp_text_code.html  fn.build_response.html  fn.build_response_data.html  fn.build_response_done.html  fn.build_section.html  fn.build_status.html  fn.build_string.html  fn.build_zone.html  fn.extract_string.html  fn.parse_capability.html  fn.parse_literal.html  fn.parse_response.html  fn.parse_streamed_response.html  fn.parse_zone.html  fn.unwrap1.html  index.html  sidebar-items.js  struct.Rfc3501.html  (+1 more)
api/panorama_imap/response/: enum.Attribute.html  enum.AttributeValue.html  enum.BodyExtension.html  enum.BodyStructure.html  enum.Capability.html  enum.ContentEncoding.html  enum.MailboxData.html  enum.MailboxDatum.html  enum.MailboxFlag.html  enum.MessageSection.html  enum.Response.html  enum.ResponseCode.html  enum.SectionPath.html  enum.Status.html  enum.StatusAttribute.html  enum.UidSetMember.html  index.html  sidebar-items.js  struct.Address.html  struct.BodyContentCommon.html  struct.BodyContentSinglePart.html  struct.BodySection.html  struct.ContentDisposition.html  struct.ContentType.html  struct.Envelope.html  struct.Metadata.html  struct.RequestId.html  struct.Response.html  struct.ResponseData.html  struct.ResponseDone.html  type.BodyParams.html
api/panorama_imap/types/: enum.AttrMacro.html  (+30 more)
api/panorama_maildir/: all.html  index.html  sidebar-items.js  struct.Maildir.html  struct.StoreOptions.html
api/panorama_smtp/: all.html  index.html
api/panorama_strings/: all.html  index.html  sidebar-items.js  struct.Entry.html  struct.Store.html  type.StringEntry.html  type.StringStore.html
api/panorama_tui/: all.html  enum.ResizeBehavior.html  fn.color_conv.html  index.html  sidebar-items.js  struct.Frame.html  struct.ModifierDiff.html  struct.Terminal.html  struct.TerminalOptions.html  struct.Viewport.html
docs/: book.toml
docs/src/: SUMMARY.md  code.md  config.md  intro.md
imap/: .ignore  Cargo.toml  README.md
imap/examples/: parse_response.rs
imap/src/: codec.rs  command.rs  lib.rs  response.rs  types.rs
imap/src/builders/: command.rs
imap/src/client/: auth.rs  inner.rs  mod.rs
imap/src/command/: mod.rs
imap/src/oldparser/: rfc4315.rs  rfc4551.rs  rfc5161.rs  rfc5464.rs  rfc7162.rs
imap/src/oldparser/rfc3501/: body.rs  mod.rs
imap/src/parser/: bodystructure.rs  core.rs  literal.rs  mod.rs  old.rs  rfc3501.pest  rfc4315.rs  rfc4551.rs  rfc5161.rs  rfc5464.rs  rfc7162.rs  tests.rs  types.rs
imap/src/parser/rfc3501/: body.rs  body_structure.rs  mod.rs
imap/src/pest-parser/: mod.rs  rfc3501.pest
imap/src/response/: mod.rs
maildir/: Cargo.toml
maildir/src/: lib.rs
migrations/: 1_initial.sql
smtp/: Cargo.toml  README.md
src/: app.rs  config.rs  lib.rs  mail.rs  mailapp.rs  main.rs  panorama.rs  script.rs  search.rs  ui.rs
src/mail/: client.rs  event.rs  imap.rs  imap2.rs  metadata.rs  mod.rs  store.rs
src/ui/: colon_prompt.rs  drawable.rs  drawbuf.rs  input.rs  keybinds.rs  mail_store.rs  mail_tab.rs  mail_view.rs  messages.rs  mod.rs  table.rs  tabs.rs  widget.rs  windows.rs
src/ui_custom/: mod.rs  table.rs  tabs.rs
strings/: Cargo.toml
strings/src/: lib.rs
tui/: Cargo.toml
tui/src/: lib.rs
(+423 files in other folders)
