[package]
name = "panorama"
version = "0.0.1"
authors = ["Michael Zhang <mail@mzhang.io>"]
edition = "2018"
description = "A customizable personal information manager."
repository = "https://git.mzhang.io/michael/panorama"
readme = "README.md"
license = "GPL-3.0-or-later"

[workspace]
members = ["imap", "smtp"]

[dependencies]
crossterm = "0.19.0"
anyhow = "1.0.38"
async-trait = "0.1.42"
cfg-if = "1.0.0"
chrono = "0.4.19"
fern = { version = "0.6.0", features = ["colored"] }
format-bytes = "0.2.0"
futures = "0.3.13"
inotify = { version = "0.9.2", features = ["stream"] }
log = "0.4.14"
notify-rust = { version = "4.2.2", default-features = false, features = ["z"] }
parking_lot = "0.11.1"
# pgp = "0.7.1"
serde = { version = "1.0.123", features = ["derive"] }
structopt = "0.3.21"
tokio = { version = "1.2.0", features = ["full"] }
tokio-rustls = "0.22.0"
tokio-stream = { version = "0.1.3", features = ["sync"] }
tokio-util = { version = "0.6.3", features = ["full"] }
toml = "0.5.8"
tui = { version = "0.14.0", default-features = false, features = ["crossterm"] }
webpki-roots = "0.21.0"
xdg = "2.2.0"

[dependencies.panorama-imap]
path = "imap"
version = "0"
features = ["rfc2177-idle"]

[dependencies.panorama-smtp]
path = "smtp"
version = "0"

[features]
clippy = []
