[package]
name = "panorama"
version = "0.0.1"
authors = ["Michael Zhang <mail@mzhang.io>"]
edition = "2018"
description = "A customizable personal information manager."
repository = "https://git.mzhang.io/michael/panorama"
readme = "README.md"
license = "GPL-3.0-or-later"

[workspace]
members = [
    "imap",
    "smtp",
    "tui",
]

[dependencies]
# tantivy = "0.14.0"
anyhow = "1.0.39"
async-trait = "0.1.48"
cfg-if = "1.0.0"
chrono = "0.4.19"
chrono-humanize = "0.1.2"
downcast-rs = "1.2.0"
fern = { version = "0.6.0", features = ["colored"] }
format-bytes = "0.2.2"
futures = "0.3.13"
gluon = "0.17.2"
hex = "0.4.3"
inotify = { version = "0.9.2", features = ["stream"] }
log = "0.4.14"
mailparse = "0.13.2"
notify-rust = { version = "4.3.0", default-features = false, features = ["z"] }
panorama-tui = { path = "tui" }
parking_lot = "0.11.1"
quoted_printable = "0.4.2"
serde = { version = "1.0.124", features = ["derive"] }
sha2 = "0.9.3"
shellexpand = "2.1.0"
sqlx = { version = "0.5.1", features = ["runtime-tokio-rustls", "sqlite"] }
structopt = "0.3.21"
tokio = { version = "1.3.0", features = ["full"] }
tokio-rustls = "0.22.0"
tokio-stream = { version = "0.1.4", features = ["sync"] }
tokio-util = { version = "0.6.4", features = ["full"] }
toml = { version = "0.5.8", features = ["preserve_order"] }
webpki-roots = "0.21.0"
xdg = "2.2.0"
indexmap = "1.6.2"

[dependencies.panorama-imap]
path = "imap"
version = "0"
features = ["rfc2177-idle"]

[dependencies.panorama-smtp]
path = "smtp"
version = "0"

[features]
clippy = []

[package.metadata.deb]
depends = "$auto"
