[package]
name = "panorama-imap"
version = "0.0.1"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>", "Michael Zhang <mail@mzhang.io>"]
description = "IMAP protocol parser and data structures"
keywords = ["imap", "email"]
categories = ["email", "network-programming", "parser-implementations"]
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
derive_builder = "0.9.0"
futures = "0.3.12"
log = "0.4.14"
parking_lot = "0.11.1"
pest = { git = "https://github.com/iptq/pest", rev = "838adc941cc182e2c2d807e245a1e4c3e8594036" }
pest_derive = { git = "https://github.com/iptq/pest", rev = "838adc941cc182e2c2d807e245a1e4c3e8594036" }
tokio = { version = "1.1.1", features = ["full"] }
tokio-rustls = "0.22.0"
tokio-stream = "0.1.3"
webpki-roots = "0.21.0"

[dev-dependencies]
assert_matches = "1.3"

[features]
default = ["rfc2177-idle"]
rfc2177-idle = []
