[package]
name = "panorama-imap"
version = "0.0.1"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>", "Michael Zhang <mail@mzhang.io>"]
description = "IMAP protocol parser and data structures"
keywords = ["imap", "email"]
categories = ["email", "network-programming", "parser-implementations"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
bytes = { version = "1.0.1" }
chrono = "0.4.19"
derive_builder = "0.9.0"
futures = "0.3.12"
log = "0.4.14"
parking_lot = "0.11.1"
# pest = { path = "../../pest/pest" }
# pest_derive = { path = "../../pest/derive" }
pest = { git = "https://github.com/iptq/pest", rev = "6a4d3a3d10e42a3ee605ca979d0fcdac97a83a99" }
pest_derive = { git = "https://github.com/iptq/pest", rev = "6a4d3a3d10e42a3ee605ca979d0fcdac97a83a99" }
quoted_printable = "0.4.2"
tokio = { version = "1.1.1", features = ["full"] }
tokio-rustls = "0.22.0"
tokio-util = { version = "0.6.3" }
webpki-roots = "0.21.0"

[dev-dependencies]
assert_matches = "1.3"

[features]
default = ["rfc2177-idle"]
rfc2177-idle = []
