[package]
name = "panorama-tui"
version = "0.1.0"
authors = ["Michael Zhang <mail@mzhang.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
crossterm = { version = "0.19.0", features = ["event-stream"] }
futures = "0.3.13"
log = "0.4.14"
tokio = { version = "1.4.0", features = ["full"] }
tui = { version = "0.14.0", default-features = false, features = ["crossterm"] }
